--- a/tools/tsbs-tdengine/resource/config/readings.yaml
+++ b/tools/tsbs-tdengine/resource/config/readings.yaml
@@ -17,6 +17,30 @@ testCases:
       verifySql: select count(*) from db1.res_a3
       expectRows: 186
 
+    - scenarioId: "A4"
+      querySql: select count(*) from db1.readings
+      dataRows: 9988893
+      verifySql: select count(*) from db1.res_a4
+      expectRows: 8888      
+
+    - scenarioId: "A5"
+      querySql: select count(*) from db1.readings
+      dataRows: 9988893
+      verifySql: select count(*) from db1.res_a5
+      expectRows: 76      
+
+    - scenarioId: "A6"
+      querySql: select count(*) from db1.readings
+      dataRows: 9988893
+      verifySql: select count(*) from db1.res_a6
+      expectRows: 8888      
+
+    - scenarioId: "A7"
+      querySql: select count(*) from db1.readings
+      dataRows: 9988893
+      verifySql: select count(*) from db1.res_a7
+      expectRows: 8888
+   
     - scenarioId: "T1"
       querySql: select count(*) from db1.readings
       dataRows: 9988893
