--- a/packaging/docker/DockerfileTDgpt
+++ b/packaging/docker/DockerfileTDgpt
@@ -5,15 +5,22 @@ ARG pkgFile
 ARG dirName
 ARG modelDlUrl
 
+
 COPY ${modelDlUrl}/tdtsfm/taos.pth /var/lib/taos/taosanode/model/tdtsfm/
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
-ADD ${pkgFile} /root/
+
+COPY ${pkgFile} /tmp/
 ENV INSTALL_VENV=False
-RUN cd ${dirName}/ && \
-    /bin/bash install.sh -e no && \
-    cd .. && \
-    rm -rf ${dirName}
+RUN set -eux; \
+    TDGPT_INSTALL_DIR=/tmp/tdgpt-installer; \
+    mkdir -p "${TDGPT_INSTALL_DIR}"; \
+    tar -zxf /tmp/"${pkgFile}" --strip-components=1 --directory="${TDGPT_INSTALL_DIR}"; \
+    cd "${TDGPT_INSTALL_DIR}"; \
+    /bin/bash install.sh -e no; \ 
+    cd ..; \
+    rm -rf /tmp/*
+
 EXPOSE 6035 8387 6036 6037 6038 6039 6061 6062
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
