fix: use --link option for moment model files in Dockerfile

--- a/packaging/docker/DockerfileTDgpt
+++ b/packaging/docker/DockerfileTDgpt
@@ -29,5 +29,5 @@ FROM tdgpt AS tdgpt_full
 COPY ${modelDlUrl}/timemoe/* \
     /var/lib/taos/taosanode/model/timemoe/
 
-COPY ${modelDlUrl}/moment/* \
+COPY --link ${modelDlUrl}/moment/* \
     /var/lib/taos/taosanode/model/moment/
