--- a/test/cases/05-VirtualTables/in/test_vstable_select_test_function.in
+++ b/test/cases/05-VirtualTables/in/test_vstable_select_test_function.in
@@ -43,12 +43,11 @@ select week(ts) from test_vtable_select.vtb_virtual_stb order by ts, int_tag lim
 select dayofweek(ts) from test_vtable_select.vtb_virtual_stb order by ts, int_tag limit 50;
 select weekofyear(ts) from test_vtable_select.vtb_virtual_stb order by ts, int_tag limit 50;
 select weekday(ts) from test_vtable_select.vtb_virtual_stb order by ts, int_tag limit 50;
-select apercentile(int_col, 10) from test_vtable_select.vtb_virtual_stb limit 50;
 select avg(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 select count(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 select count(*) from test_vtable_select.vtb_virtual_stb limit 50;
 select elapsed(ts) from test_vtable_select.vtb_virtual_stb limit 50;
-select leastsquares(int_col, 0, 1) from test_vtable_select.vtb_virtual_stb limit 50;
+select leastsquares(int_col, 0, 1) from test_vtable_select.vtb_virtual_stb where int_tag = 1 limit 50;
 select spread(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 select stddev(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 select sum(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
@@ -57,19 +56,16 @@ select hyperloglog(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 select percentile(int_col, 0.5) from test_vtable_select.vtb_virtual_stb limit 50;
 select bottom(int_col, 10) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
 select top(int_col, 10) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
-select interp(u_smallint_col) from test_vtable_select.vtb_virtual_stb where u_tinyint_col > 0 and u_int_col > 0 RANGE('2020-10-01 00:00:00.000', '2020-10-01 00:01:00.000') EVERY (2a) FILL(linear) limit 50;
 select max(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 select min(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 select mode(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 select tail(int_col, 20) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
 select unique(u_tinyint_col) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
-select csum(u_tinyint_col) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
-select derivative(int_col, 5a, 1) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
 select diff(int_col) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
 select irate(int_col) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
 select mavg(int_col, 100) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
-select statecount(u_tinyint_col, "GT", 20) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
-select stateduration(u_tinyint_col, "GT", 20, 1a) from test_vtable_select.vtb_virtual_stb order by 1 limit 50;
+select statecount(u_tinyint_col, "GT", 20) from test_vtable_select.vtb_virtual_stb where int_tag = 1 limit 50;
+select stateduration(u_tinyint_col, "GT", 20, 1a) from test_vtable_select.vtb_virtual_stb where int_tag = 1 limit 50;
 select twa(int_col) from test_vtable_select.vtb_virtual_stb limit 50;
 
 
@@ -87,7 +83,7 @@ select sin(int_tag) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
 select sqrt(int_tag) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
 select tan(int_tag) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
 select PI() from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
-select PI(), u_tinyint_col from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
+select PI(), u_tinyint_col from test_vtable_select.vtb_virtual_stb order by 1,2 limit 5;
 select exp(int_tag) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
 select ln(int_tag) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
 select mod(int_tag, 10) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
@@ -137,8 +133,8 @@ select tail(int_tag, 20) from test_vtable_select.vtb_virtual_stb order by 1 limi
 select unique(int_tag) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
 select derivative(int_tag, 5a, 1) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
 select irate(int_tag) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
-select statecount(int_tag, "GT", 20) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
-select stateduration(int_tag, "GT", 20, 1a) from test_vtable_select.vtb_virtual_stb order by 1 limit 5;
+select statecount(int_tag, "GT", 20) from test_vtable_select.vtb_virtual_stb where int_tag = 1 limit 5;
+select stateduration(int_tag, "GT", 20, 1a) from test_vtable_select.vtb_virtual_stb where int_tag = 1 limit 5;
 
 select count(tbname) from test_vtable_select.vtb_virtual_stb;
 select count(1) from test_vtable_select.vtb_virtual_stb;
