feat: scene U1 with full fields streams

--- a/tools/tsbs-tdengine/resource/config/alarm.yaml
+++ b/tools/tsbs-tdengine/resource/config/alarm.yaml
@@ -3,5 +3,5 @@ testCases:
     - scenarioId: "U1"
       querySql: select count(*) from metron_dmp.alarm;
       dataRows: 281634
-      verifySql: select * from metron_dmp.result_alarm
+      verifySql: select count(*) from metron_dmp.result_alarm
       expectRows: 8888
