--- a/.github/workflows/tdengine-test.yml
+++ b/.github/workflows/tdengine-test.yml
@@ -48,7 +48,7 @@ env:
 jobs:
   run-tests-on-linux:
     # NOTE: using tomchon-patch-3 branch for the moment
-    uses: taosdata/.github/.github/workflows/run-tests-on-linux.yml@enh/add-multi-vm
+    uses: taosdata/.github/.github/workflows/run-tests-on-linux.yml@main
     with:
       tdinternal: false
       specified_source_branch: ${{ github.event_name == 'pull_request' && 'unavailable' || inputs.specified_source_branch }}
