fix: add yarn install step for dependencies in document build process

--- a/.github/workflows/tdengine-docs-ci.yml
+++ b/.github/workflows/tdengine-docs-ci.yml
@@ -169,6 +169,7 @@ jobs:
           cd ${{ env.DOC_WKC }}/${{ env.ZH_DOC_REPO }}
           rm -rf docs/* && git restore docs/ 
           git checkout -f master && git pull origin master 
+          yarn install 
           yarn ass local
           yarn build
       - name: Build the english document
@@ -177,5 +178,6 @@ jobs:
           cd ${{ env.DOC_WKC }}/${{ env.EN_DOC_REPO }}
           rm -rf docs/* && git restore docs/
           git checkout -f main && git pull origin main 
+          yarn install 
           yarn ass local
           yarn build
