--- a/docs/.markdownlint-cli2.jsonc
+++ b/docs/.markdownlint-cli2.jsonc
@@ -14,8 +14,9 @@
 	"MD041": false, // first-line-heading 禁止第一行必须是标题
 	"MD046": {"style": "fenced"}, // code-fence-style 代码块使用围栏样式
 	"MD048": {"style": "backtick"}, // Code fence style 只允许用反引号 ``` 作为围栏
-	"MD052": false  // reference-links-image: 禁止引用链接和图片
+	"MD052": false,  // reference-links-image: 禁止引用链接和图片
 	// "no-space-after-emphasis": {"severity": "error"}
+	"MD060": false
   },
   "customRules": ["./custom-rules/space-after-punctuation-in-emphasis.js"],
   "ignores": ["node_modules/**", "dist/**"] // 忽略路径
