--- a/tools/tsbs-tdengine/resource/config/stbd1.yaml
+++ b/tools/tsbs-tdengine/resource/config/stbd1.yaml
@@ -2,17 +2,20 @@ testCases:
     # U1
     - scenarioId: "D1"
       querySql: select count(*) from db.stbd1;
-      dataRows: 10000
+      dataRows: 20000
       verifySql: select count(*) from db.res_d1;
-      expectRows: 10000
+      expectRows: 20000
       compare: ">="
       delaySql: select 
                     count(ts)  cnt,
                     avg(delay) avg_val,
+                    min(delay) min_val,
+                    apercentile(delay, 10) p10,
                     apercentile(delay, 50) p50,
                     apercentile(delay, 90) p90,
                     apercentile(delay, 95) p95,
-                    apercentile(delay, 99) p99 
+                    apercentile(delay, 99) p99,
+                    max(delay) max_val
                   from ( 
                          select ts,
                                 localtime,
