feat:register instance (#33666)

--- a/source/client/test/CMakeLists.txt
+++ b/source/client/test/CMakeLists.txt
@@ -52,6 +52,13 @@ TARGET_LINK_LIBRARIES(
 )
 endif()
 
+ADD_EXECUTABLE(instanceTest instanceTest.cpp)
+DEP_ext_gtest(instanceTest)
+TARGET_LINK_LIBRARIES(
+        instanceTest PRIVATE
+        os util common transport parser catalog scheduler ${TAOS_NATIVE_LIB_STATIC} qcom executor function
+)
+
 ADD_EXECUTABLE(stmt2Test stmt2Test.cpp)
 DEP_ext_gtest(stmt2Test)
 TARGET_LINK_LIBRARIES(
@@ -112,6 +119,10 @@ IF(${TD_LINUX})
                 NAME clientBITest
                 COMMAND clientBITest
         )
+        add_test(
+                NAME instanceTest
+                COMMAND instanceTest
+        )
 ENDIF ()
 
 TARGET_INCLUDE_DIRECTORIES(
@@ -143,6 +154,12 @@ TARGET_INCLUDE_DIRECTORIES(
         stmtTest
         PUBLIC "${TD_SOURCE_DIR}/include/client/"
         PUBLIC "${TD_SOURCE_DIR}/include/libs/geometry"
+        PRIVATE "${TD_SOURCE_DIR}/source/client/inc"
+)
+
+TARGET_INCLUDE_DIRECTORIES(
+        instanceTest
+        PUBLIC "${TD_SOURCE_DIR}/include/client/"
         PRIVATE "${TD_SOURCE_DIR}/source/client/inc"
 )
 
