--- a/tools/tsbs-tdengine/resource/config/cases_delay.yaml
+++ b/tools/tsbs-tdengine/resource/config/cases_delay.yaml
@@ -16,3 +16,21 @@ testCases:
                       last(ts)    lastts,
                       first(ts)   firstts
                 from %%trows
+
+    - scenarioId: "D2"
+      classfication: "Delay"
+      description: ""
+      sql: |
+         create stream db.stm_d2 
+            interval(1a) 
+            sliding(1a)
+            from db.stbd2 
+            stream_options(IGNORE_NODATA_TRIGGER|LOW_LATENCY_CALC) 
+            into db.res_d2 
+            as 
+              select  _twstart    ts, 
+                      cast(_tlocaltime/1000000 as timestamp) AS localtime,
+                      count(*)    cnt,
+                      last(ts)    lastts,
+                      first(ts)   firstts
+                from %%trows
