--- a/source/util/test/errorCodeTable.ini
+++ b/source/util/test/errorCodeTable.ini
@@ -103,11 +103,14 @@ TSDB_CODE_TSC_STMT_BIND_NUMBER_ERROR                = 0x80000236
 TSDB_CODE_TSC_INTERNAL_ERROR                        = 0x800002FF
 TSDB_CODE_MND_REQ_REJECTED                          = 0x80000300
 TSDB_CODE_MND_NO_RIGHTS                             = 0x80000303
+TSDB_CODE_MND_TOO_MANY_CONNECTIONS                  = 0x80000309
 TSDB_CODE_MND_INVALID_SHOWOBJ                       = 0x8000030B
 TSDB_CODE_MND_INVALID_QUERY_ID                      = 0x8000030C
 TSDB_CODE_MND_INVALID_CONN_ID                       = 0x8000030E
 TSDB_CODE_MND_USER_DISABLED                         = 0x80000315
 TSDB_CODE_MND_INVALID_PLATFORM                      = 0x80000316
+TSDB_CODE_MND_USER_PASSWORD_EXPIRED                 = 0x80000318
+TSDB_CODE_MND_INTERNAL_ERROR                        = 0x80000319
 TSDB_CODE_SDB_OBJ_ALREADY_THERE                     = 0x80000320
 TSDB_CODE_SDB_INVALID_TABLE_TYPE                    = 0x80000322
 TSDB_CODE_SDB_OBJ_NOT_THERE                         = 0x80000323
@@ -141,8 +144,7 @@ TSDB_CODE_MND_TOO_MANY_USERS                        = 0x80000355
 TSDB_CODE_MND_INVALID_ALTER_OPER                    = 0x80000356
 TSDB_CODE_MND_AUTH_FAILURE                          = 0x80000357
 TSDB_CODE_MND_PRIVILEDGE_EXIST                      = 0x80000359
-TSDB_CODE_MND_USER_IP_RANGE_CONFLICT                = 0x8000035A
-TSDB_CODE_MND_USER_TIME_RANGE_CONFLICT              = 0x8000035B
+TSDB_CODE_MND_USER_PASSWORD_REUSE                   = 0x8000035A
 TSDB_CODE_MND_TOO_MANY_USER_IP_RANGE                = 0x8000035C
 TSDB_CODE_MND_TOO_MANY_USER_TIME_RANGE              = 0x8000035D
 TSDB_CODE_MND_STB_ALREADY_EXIST                     = 0x80000360
@@ -559,6 +561,12 @@ TSDB_CODE_PAR_PRIMARY_KEY_IS_NULL                   = 0x8000267B
 TSDB_CODE_PAR_PRIMARY_KEY_IS_NONE                   = 0x8000267C
 TSDB_CODE_PAR_TRUE_FOR_NEGATIVE                     = 0x80002687
 TSDB_CODE_PAR_TRUE_FOR_UNIT                         = 0x80002688
+TSDB_CODE_PAR_OPTION_DUPLICATED                     = 0x80002699
+TSDB_CODE_PAR_INVALID_OPTION_VALUE                  = 0x8000269A
+TSDB_CODE_PAR_OPTION_VALUE_TOO_LONG                 = 0x8000269B
+TSDB_CODE_PAR_OPTION_VALUE_TOO_SHORT                = 0x8000269C
+TSDB_CODE_PAR_OPTION_VALUE_TOO_BIG                  = 0x8000269D
+TSDB_CODE_PAR_OPTION_VALUE_TOO_SMALL                = 0x8000269E
 TSDB_CODE_PAR_INTERNAL_ERROR                        = 0x800026FF
 TSDB_CODE_PLAN_INTERNAL_ERROR                       = 0x80002700
 TSDB_CODE_PLAN_EXPECTED_TS_EQUAL                    = 0x80002701
